--- a/index.html
+++ b/index.html
@@ -20,7 +20,220 @@
 </head>
 
 <body>
-  <h1>あいうえお</h1>
-  <h2>あいうえお</h2>
+<div class="firstview">
+  <header id="header">
+    <h1>
+      <object data="../portfolio_ootani/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
+      </h1>
+    <nav class="top_nav">
+      <ul>
+        <li><a href="#concept">コンセプト</a></li>
+        <li><a href="#works">制作実績</a></li>
+        <li><a href="#skill">できること</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div id="mainvisual">
+      <h1>“その先”を見据えたデザインで<br>新たな船出を、ともに。</h1>
+    </div>
+  </main>
+</div>
+
+<div class="contents_area">
+<section id="concept">
+  <div class="concept_title">コンセプト</div>
+  <p>新たな船出は、期待だけでなく<br>
+    上手く進んでいけるのかな？という不安がつきもの。<br>
+    そんなとき、デザインという側面から<br>
+    未来に向かって漕ぎだすお手伝いをしたい。<br>
+    そんな想いを、この屋号に込めています。
+  </p>
+</section>
+
+<section id="profile">
+  <div class="profile_img_area">
+  </div>
+  <div class="profile_right">
+    <div class="name_area">
+      <div class="name">大谷&emsp;歩紀</div>
+      <div class="inglish_name">Ohtani&emsp;Ibuki</div>
+    </div>
+    <div class="profile_text">
+      <p>
+        2000年生まれ、島根県出身。東京都在住。<br>
+        大学卒業後、新卒で人材会社に就職。キャリアアドバイザーとして学生面談・面接対策・企業紹介に従事。新卒採用担当も兼務し、自社説明会の企画・運営、広報活動に携わる。
+        現在、不動産会社にて自社物件サイトの更新業務に従事。物件写真の撮影・画像加工・ライティングに携わる。業務を通してWebサイトの管理・更新を学ぶ傍ら、WebデザインスクールにてWebデザインを学ぶ。
+      </p>
+    </div>
+  </div>
+</section>
+
+<button class="profile_btn01">大谷ってどんな人？</button>
+<div class="comment_area">
+  <div class="comment">\大谷ってどんな人？/</div>
+  <div class="comment">\どんな想いを抱いているの？/</div>
+</div>
+<button class="profile_btn02">自己紹介ページはこちら！</button>
+
+<!-- 波形 -->
+<div class="svg-sample">
+  <!-- <p class="text">インラインSVGで入れた場合</p> -->
+  <div class="u-sp">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 100" width="100%">
+      <path d="M 0 15.5 Q 16 15.5 32 9 Q 64 -4 96 9 Q 112 15.5 128 15.5 Q 144 15.5 160 9 Q 192 -4 224 9 Q 240 15.5 256 15.5 Q 272 15.5 288 9 Q 320 -4 352 9 Q 368 15.5 384 15.5 Q 400 15.5 416 9 Q 448 -4 480 9 Q 496 15.5 512 15.5 Q 528 15.5 544 9 Q 576 -4 608 9 Q 624 15.5 640 15.5 Q 656 15.5 672 9 Q 704 -4 736 9 Q 752 15.5 768 15.5 Q 784 15.5 800 9 Q 832 -4 864 9 Q 880 15.5 896 15.5 Q 912 15.5 928 9 Q 960 -4 992 9 Q 1008 15.5 1024 15.5 Q 1040 15.5 1056 9 Q 1088 -4 1120 9 Q 1136 15.5 1152 15.5 Q 1168 15.5 1184 9 Q 1216 -4 1248 9 Q 1264 15.5 1280 15.5" fill="none" stroke="#2c679c" stroke-width="5" transform="translate(0, 41)"></path>
+    </svg>
+  </div>
+  <div class="u-pc">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 100" width="100%">
+      <path d="M 0 15.5 Q 16 15.5 32 9 Q 64 -4 96 9 Q 112 15.5 128 15.5 Q 144 15.5 160 9 Q 192 -4 224 9 Q 240 15.5 256 15.5 Q 272 15.5 288 9 Q 320 -4 352 9 Q 368 15.5 384 15.5 Q 400 15.5 416 9 Q 448 -4 480 9 Q 496 15.5 512 15.5 Q 528 15.5 544 9 Q 576 -4 608 9 Q 624 15.5 640 15.5 Q 656 15.5 672 9 Q 704 -4 736 9 Q 752 15.5 768 15.5 Q 784 15.5 800 9 Q 832 -4 864 9 Q 880 15.5 896 15.5 Q 912 15.5 928 9 Q 960 -4 992 9 Q 1008 15.5 1024 15.5 Q 1040 15.5 1056 9 Q 1088 -4 1120 9 Q 1136 15.5 1152 15.5 Q 1168 15.5 1184 9 Q 1216 -4 1248 9 Q 1264 15.5 1280 15.5" fill="none" stroke="#2c679c" stroke-width="5" transform="translate(0, 41)"></path>
+    </svg>
+  </div>
+</div>
+
+<section id="works">
+  <h2>制作実績</h2>
+  <div class="works_area">
+    <div class="works_contents">
+      <div class="works_img"></div>
+      <div class="works_text">○○様&emsp;公式サイト</div>
+    </div>
+    <div class="works_contents">
+      <div class="works_img"></div>
+      <div class="works_text">○○様&emsp;公式サイト</div>
+    </div>
+    <div class="works_contents">
+      <div class="works_img"></div>
+      <div class="works_text">○○様&emsp;公式サイト</div>
+    </div>
+    <div class="works_contents">
+      <div class="works_img"></div>
+      <div class="works_text">○○様&emsp;公式サイト</div>
+    </div>
+    <div class="works_contents">
+      <div class="works_img"></div>
+      <div class="works_text">○○様&emsp;公式サイト</div>
+    </div>
+    <div class="works_contents">
+      <div class="works_img"></div>
+      <div class="works_text">○○様&emsp;公式サイト</div>
+    </div>
+  </div>
+  <button class="works_btn">一覧を見る</button>
+</section>
+
+<section id="skill">
+  <h2>できること</h2>
+  <div class="skill_area01">
+    <div class="design_skill">
+      <div class="skill_title">デザイン</div>
+      <p>illustrator/Photoshop</p>
+      <div class="skill_text">
+        ターゲットにどんな行動を促したいのかを考え<br>
+        情報設計に基づいたデザインを創ります。<br>
+        WEBサイト・LP・バナー以外にも<br>
+        SNS投稿・資料作成・ロゴ・名刺・メニュー表なども作成いたします。
+      </div>
+    </div>
+    <div class="skill_img"><img src="../portfolio_ootani/カンプ書き出し/2x/できること①_pc@2x-80.jpg" alt="パソコンのイラスト"></div>
+  </div>
+
+    <div class="skill_area01">
+      <div class="design_skill">
+        <div class="skill_title">コーディング</div>
+        <p>HTML/CSS/JavaScript</p>
+          <div class="skill_text">
+          デザインを正しく表現するためのコーディングをします。<br>
+          レスポンシブに対応したコードを書くことができます。<br>
+          JavaScript・jQueryを用いて動きのあるサイトを作ることができます。
+          </div>
+      </div>
+      <div class="skill_img"><img src="../portfolio_ootani/カンプ書き出し/2x/できること②_pc@2x-80.jpg"></div>
+    </div>
+
+    <div class="skill_area01">
+      <div class="design_skill">
+        <div class="skill_title">ライティング</div>
+        <p>“いいところ”を引き出す言葉選び"</p>
+        <div class="skill_text">
+          人材会社で求職者さんの自己ＰＲ文を作ったり、<br>
+          不動産会社で物件をアピールする文章を書いた経験があります。<br>
+          デザインだけでなく、ライティングの面からも
+          良さを伝えるお手伝いができます。
+          </div>
+      </div>
+      <div class="skill_img"><img src="../portfolio_ootani/カンプ書き出し/2x/できること③_pc@2x-80.jpg"></div>
+    </div>
+</section>
+
+<section id="contact">
+  <h2>CONTACT</h2>
+  <p>ご依頼やお問い合わせ・こんなことできる？といったご相談など<br>
+    お気軽にお問い合わせください。<br>
+    1日以内にお返事させていただきます。
+  </p>
+  <form action="your-server-side-script.php" method="POST">
+  </form>
+    <div class="form-row">
+      <div class="form-label">
+        <label for="name">お名前</label>
+        <span>必須</span>
+      </div>
+      <input type="text" id="name" name="name" placeholder="例) 山田 太朗" required>
+    </div>
+    <div class="form-row">
+      <div class="form-label">
+        <label for="email">メールアドレス</label>
+        <span>必須</span>
+      </div>
+      <input type="email" id="email" name="email" placeholder="例) abcd@xyz.com" required>
+    </div>
+    <div class="form-row">
+      <div class="form-label">
+        <label for="company">社名/所属</label>
+      </div>
+      <textarea id="company" name="company" rows="5"placeholder="社名/所属をこちらにご記入ください" required></textarea>
+    </div>
+  
+    <div class="form-row">
+      <div class="form-label">
+        <label for="message">お問い合わせ内容</label>
+        <span>必須</span>
+      </div>
+      <textarea id="message" name="message" rows="5"placeholder="お問い合わせ内容をこちらにご記入ください" required></textarea>
+    </div>
+    <div class="form-row">
+      <div class="form-label"></div>
+      <!-- <button type="submit">送信</button> -->
+    </div>
+    <button class="contact_btn">送信する</button>
+  </form>
+</section>
+
+
+
+
+
+
+
+<section id="message" class="message_area">
+<img src="../portfolio_ootani/カンプ書き出し/2x/thankstext_pc.svg" class="thanks_sun_pc">
+ここまでポートフォリオをご覧いただき<br>
+ありがとうございました。<br>
+<p class="para_2"></p>
+これまでの経歴・経験を強みにしながら<br>
+“きちんと伝え、その先を見据えた”デザインで<br>
+結果に繋げるデザインを提供します。
+</section>
+
+
+
+<footer>
+  <div class="copylight">
+  &copy;ふなででざいん2024
+  </div>
+</footer>
+</div>
 </body>
 </html>
