--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="firstview">
   <header id="header">
     <h1>
-      <object data="../portfolio_ootani/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
+      <object data="./images/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
       <ul>
@@ -136,7 +136,7 @@
         SNS投稿・資料作成・ロゴ・名刺・メニュー表なども作成いたします。
       </div>
     </div>
-    <div class="skill_img"><img src="../portfolio_ootani/カンプ書き出し/2x/できること①_pc@2x-80.jpg" alt="パソコンのイラスト"></div>
+    <div class="skill_img"><img src="./images/カンプ書き出し/2x/できること①_pc@2x-80.jpg" alt="パソコンのイラスト"></div>
   </div>
 
     <div class="skill_area01">
@@ -149,7 +149,7 @@
           JavaScript・jQueryを用いて動きのあるサイトを作ることができます。
           </div>
       </div>
-      <div class="skill_img"><img src="../portfolio_ootani/カンプ書き出し/2x/できること②_pc@2x-80.jpg"></div>
+      <div class="skill_img"><img src="./images/カンプ書き出し/2x/できること②_pc@2x-80.jpg"></div>
     </div>
 
     <div class="skill_area01">
@@ -163,7 +163,7 @@
           良さを伝えるお手伝いができます。
           </div>
       </div>
-      <div class="skill_img"><img src="../portfolio_ootani/カンプ書き出し/2x/できること③_pc@2x-80.jpg"></div>
+      <div class="skill_img"><img src="./images/カンプ書き出し/2x/できること③_pc@2x-80.jpg"></div>
     </div>
 </section>
 
@@ -218,7 +218,7 @@
 
 
 <section id="message" class="message_area">
-<img src="../portfolio_ootani/カンプ書き出し/2x/thankstext_pc.svg" class="thanks_sun_pc">
+<img src="./images/カンプ書き出し/2x/thankstext_pc.svg" class="thanks_sun_pc">
 ここまでポートフォリオをご覧いただき<br>
 ありがとうございました。<br>
 <p class="para_2"></p>
