--- a/loading.html
+++ b/loading.html
@@ -29,9 +29,9 @@
 
 <body>
 <div class="logo_img">
-  <img src="../portfolio_ootani/カンプ書き出し/2x/loading_船_pc.svg">
+  <img src="./images/カンプ書き出し/2x/loading_船_pc.svg">
   <h2>ふなででざいん</h2>
-  <img src="../portfolio_ootani/カンプ書き出し/2x/loading_船_pc.svg">
+  <img src="./images/カンプ書き出し/2x/loading_船_pc.svg">
 </div>
 </div>
 </body>
