--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
   <div id="profile_page" class="main_contents">
   <header id="header" class="profile_header">
     <h1>
-      <object data="../portfolio_ootani/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
+      <object data="./images/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
       <ul>
@@ -205,19 +205,19 @@
 
   <div class="strong_point_box">
     <div class="strong_point_title">ヒアリング力</div>
-    <img src="../portfolio_ootani/18225.png" alt="説明をしているイラスト" class="strong_point_image_1">
+    <img src="./images/18225.png" alt="説明をしているイラスト" class="strong_point_image_1">
     <div class="strong_point_text">キャリアアドバイザーを経験したことから、寄り添ったヒアリングが得意です。単に質問をして回答をいただくのではなく〝お客様の伝えたいことを上手く引き出すために、どんな聞き方が最適か〟を考えた上でヒアリングをします。
     </div>
   </div>  
   <div class="strong_point_box">
     <div class="strong_point_title">多角的に考える力</div>
-    <img src="../portfolio_ootani/17023_color.png" alt="ひらめいたイラスト" class="strong_point_image_2">
+    <img src="./images/17023_color.png" alt="ひらめいたイラスト" class="strong_point_image_2">
     <div class="strong_point_text">デザインを1つの視点だけで見るのではなく、お客様の視点、第3者の視点からも考えるようにしています。デザイナーとしての視点を持った上で、別の視点からはどう見えるのかを考えてデザインをします。
     </div>
   </div>  
   <div class="strong_point_box">
     <div class="strong_point_title">情報整理・分析をして伝える力</div>
-    <img src="../portfolio_ootani/9759.png" alt="説明をしているイラスト" class="strong_point_image_3">
+    <img src="./images/9759.png" alt="説明をしているイラスト" class="strong_point_image_3">
     <div class="strong_point_text">求職者さんの自己PR文を作ったり、物件をアピールする文章を書いた経験から、情報を整理・分析して伝えることが得意です。お客様の伝えたいことが伝わるデザインになるよう、細かい情報整理からサポートさせていただきます。
     </div>
   </div>  
