--- a/works.html
+++ b/works.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="profile_header">
     <h1>
-    <object data="../portfolio_ootani/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
+    <object data="./images/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
     </h1>
     <nav class="top_nav">
     </nav>
