--- a/detail.html
+++ b/detail.html
@@ -23,7 +23,7 @@
   <div class="main_contents">
   <header id="header" class="profile_header">
     <h1>
-      <object data="../portfolio_ootani/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
+      <object data="./images/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
     </nav>
@@ -39,7 +39,7 @@
  
   <div class="contents_area">
     <h2>ー作品詳細ー</h2>
-    <img src="../portfolio_ootani/カンプ書き出し/2x/mockup_pc@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
+    <img src="./images/カンプ書き出し/2x/mockup_pc@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
       <div class="mockup_text_area">
         <div class="mockup_page_left">
           <div class="mockup_title">概要</div>
@@ -64,8 +64,8 @@
       </div>
       <h2>-完成図-</h2>
       <div class="screenshot">
-        <img src="../portfolio_ootani/カンプ書き出し/2x/screen_1_pc@2x-80.jpg" alt="PC版のスクリーンショット" class="pc_screen">
-        <img src="../portfolio_ootani/カンプ書き出し/2x/screen_2_pc@2x-80.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
+        <img src="./images/カンプ書き出し/2x/screen_1_pc@2x-80.jpg" alt="PC版のスクリーンショット" class="pc_screen">
+        <img src="./images/カンプ書き出し/2x/screen_2_pc@2x-80.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
       </div>
   
       <footer id="profile_footer">
