--- a/detail.html
+++ b/detail.html
@@ -21,13 +21,12 @@
 
 <body>
   <div class="main_contents">
-  <header id="header" class="profile_header">
+  <header id="header" class="detail_header">
     <h1>
-      <object data="./images/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
-      </h1>
+      <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
+    </h1>
     <nav class="top_nav">
     </nav>
-
     <nav class="ham_nav">
       <ul>
         <li><a href="index.html">ホーム</a></li>
@@ -39,7 +38,7 @@
  
   <div class="contents_area">
     <h2>ー作品詳細ー</h2>
-    <img src="./images/カンプ書き出し/2x/mockup_pc@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
+    <img src="./images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
       <div class="mockup_text_area">
         <div class="mockup_page_left">
           <div class="mockup_title">概要</div>
@@ -62,15 +61,19 @@
             </div>
         </div>
       </div>
+      <div class="mockup_screen">
       <h2>-完成図-</h2>
       <div class="screenshot">
-        <img src="./images/カンプ書き出し/2x/screen_1_pc@2x-80.jpg" alt="PC版のスクリーンショット" class="pc_screen">
-        <img src="./images/カンプ書き出し/2x/screen_2_pc@2x-80.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
+        <!-- <img src="./images/カンプ書き出し/2x/screen_1_pc@2x-80.jpg" alt="PC版のスクリーンショット" class="pc_screen">
+        <img src="./images/カンプ書き出し/2x/screen_2_pc@2x-80.jpg" alt="スマホ版のスクリーンショット" class="sp_screen"> -->
+        <img src="./images/コワーキング＿PC.jpg" alt="PC版のスクリーンショット" class="pc_screen">
+        <img src="./images/コワーキング＿SP.jpg" alt="スマホ版のスクリーンショット" class="sp_screen">
+      </div>
       </div>
   
       <footer id="profile_footer">
-        <button class="works_btn" onclick="location.href='index.html'">トップページへ戻る</button>
-        <button class="works_btn" onclick="location.href='profile.html'">大谷のプロフィールをもう一度読む</button>
+        <button class="works_btn" onclick="location.href='works.html'">一覧へ戻る</button>
+        <button class="works_btn" onclick="location.href='index.html'">トップページへ</button>
         <div class="footer_comment">(ありがとうございます！)</div>
         <div class="copylight">
           &copy;ふなででざいん2024
