--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     },
     h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
   })(document);
+  
 </script>
 </head>
 
@@ -23,7 +24,7 @@
 <div class="firstview">
   <header id="header">
     <h1>
-      <object data="./images/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
+      <object data="./images/カンプ書き出し/2x/アセット 52.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
       <ul>
@@ -38,8 +39,22 @@
     <div id="mainvisual">
       <h1>“その先”を見据えたデザインで<br>新たな船出を、ともに。</h1>
     </div>
+    
+    
   </main>
 </div>
+
+
+
+
+<div class="scroll_down" id="type02">
+  <a href="#">Scroll</a>
+</div>
+
+
+
+
+
 
 <div class="contents_area">
 <section id="concept">
@@ -54,6 +69,7 @@
 
 <section id="profile">
   <div class="profile_img_area">
+    <img src="../portfolio/images/仮プロフィール.jpg" alt="大谷のプロフィール画像">
   </div>
   <div class="profile_right">
     <div class="name_area">
@@ -70,60 +86,123 @@
   </div>
 </section>
 
-<button class="profile_btn01">大谷ってどんな人？</button>
+<button class="profile_btn01" onclick="location.href='profile.html'">大谷ってどんな人？</button>
 <div class="comment_area">
   <div class="comment">\大谷ってどんな人？/</div>
   <div class="comment">\どんな想いを抱いているの？/</div>
 </div>
-<button class="profile_btn02">自己紹介ページはこちら！</button>
+<button class="profile_btn02" onclick="location.href='profile.html'">自己紹介ページはこちら！</button>
 
-<!-- 波形 -->
-<div class="svg-sample">
-  <!-- <p class="text">インラインSVGで入れた場合</p> -->
-  <div class="u-sp">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 100" width="100%">
-      <path d="M 0 15.5 Q 16 15.5 32 9 Q 64 -4 96 9 Q 112 15.5 128 15.5 Q 144 15.5 160 9 Q 192 -4 224 9 Q 240 15.5 256 15.5 Q 272 15.5 288 9 Q 320 -4 352 9 Q 368 15.5 384 15.5 Q 400 15.5 416 9 Q 448 -4 480 9 Q 496 15.5 512 15.5 Q 528 15.5 544 9 Q 576 -4 608 9 Q 624 15.5 640 15.5 Q 656 15.5 672 9 Q 704 -4 736 9 Q 752 15.5 768 15.5 Q 784 15.5 800 9 Q 832 -4 864 9 Q 880 15.5 896 15.5 Q 912 15.5 928 9 Q 960 -4 992 9 Q 1008 15.5 1024 15.5 Q 1040 15.5 1056 9 Q 1088 -4 1120 9 Q 1136 15.5 1152 15.5 Q 1168 15.5 1184 9 Q 1216 -4 1248 9 Q 1264 15.5 1280 15.5" fill="none" stroke="#2c679c" stroke-width="5" transform="translate(0, 41)"></path>
-    </svg>
-  </div>
-  <div class="u-pc">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 100" width="100%">
-      <path d="M 0 15.5 Q 16 15.5 32 9 Q 64 -4 96 9 Q 112 15.5 128 15.5 Q 144 15.5 160 9 Q 192 -4 224 9 Q 240 15.5 256 15.5 Q 272 15.5 288 9 Q 320 -4 352 9 Q 368 15.5 384 15.5 Q 400 15.5 416 9 Q 448 -4 480 9 Q 496 15.5 512 15.5 Q 528 15.5 544 9 Q 576 -4 608 9 Q 624 15.5 640 15.5 Q 656 15.5 672 9 Q 704 -4 736 9 Q 752 15.5 768 15.5 Q 784 15.5 800 9 Q 832 -4 864 9 Q 880 15.5 896 15.5 Q 912 15.5 928 9 Q 960 -4 992 9 Q 1008 15.5 1024 15.5 Q 1040 15.5 1056 9 Q 1088 -4 1120 9 Q 1136 15.5 1152 15.5 Q 1168 15.5 1184 9 Q 1216 -4 1248 9 Q 1264 15.5 1280 15.5" fill="none" stroke="#2c679c" stroke-width="5" transform="translate(0, 41)"></path>
-    </svg>
-  </div>
-</div>
 
 <section id="works">
+  <!-- 波形 -->
+<div id="wave_01" class="scroll-infinity">
+  <div class="scroll-infinity__wrap">
+    <ul class="scroll-infinity__list scroll-infinity__list--left">
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>                        
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+    </ul>
+    <ul class="scroll-infinity__list scroll-infinity__list--left">
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>                        
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+    </ul>
+  </div>
+  </div> 
+
   <h2>制作実績</h2>
   <div class="works_area">
     <div class="works_contents">
-      <div class="works_img"></div>
+      <div class="works_img">
+        <img src="../portfolio/images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg">
+      </div>
       <div class="works_text">○○様&emsp;公式サイト</div>
     </div>
     <div class="works_contents">
-      <div class="works_img"></div>
+      <div class="works_img">
+        <img src="../portfolio/images/カンプ書き出し/2x/mockup_portfolio_pc@2x-80.jpg">
+      </div>
       <div class="works_text">○○様&emsp;公式サイト</div>
     </div>
     <div class="works_contents">
-      <div class="works_img"></div>
+      <div class="works_img">
+        <img src="../portfolio/images/カンプ書き出し/2x/mockup_designcafe_pc@2x-80.jpg">
+      </div>
       <div class="works_text">○○様&emsp;公式サイト</div>
     </div>
     <div class="works_contents">
-      <div class="works_img"></div>
+      <div class="works_img">
+        <img src="../portfolio/images/カンプ書き出し/2x/mockup_pc@2x-80.jpg">
+      </div>
       <div class="works_text">○○様&emsp;公式サイト</div>
     </div>
     <div class="works_contents">
-      <div class="works_img"></div>
+      <div class="works_img">
+        <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger@2x-80.jpg">
+      </div>
       <div class="works_text">○○様&emsp;公式サイト</div>
     </div>
     <div class="works_contents">
-      <div class="works_img"></div>
+      <div class="works_img">
+        <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger_pop2@2x-80.jpg">
+      </div>
       <div class="works_text">○○様&emsp;公式サイト</div>
     </div>
   </div>
-  <button class="works_btn">一覧を見る</button>
+  <button class="works_btn" onclick="location.href='works.html'">一覧を見る</button>
 </section>
 
+
 <section id="skill">
+  <div id="wave_02" class="scroll-infinity">
+    <div class="scroll-infinity__wrap">
+      <ul class="scroll-infinity__list scroll-infinity__list--left">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+      </ul>
+      <ul class="scroll-infinity__list scroll-infinity__list--left">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+      </ul>
+    </div>
+    </div> 
+
+  <div id="wave_03" class="scroll-infinity">
+    <div class="scroll-infinity__wrap">
+      <ul class="scroll-infinity__list scroll-infinity__list--right">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      </ul>
+      <ul class="scroll-infinity__list scroll-infinity__list--right">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+      </ul>
+    </div>
+    </div> 
+
   <h2>できること</h2>
   <div class="skill_area01">
     <div class="design_skill">
@@ -136,7 +215,7 @@
         SNS投稿・資料作成・ロゴ・名刺・メニュー表なども作成いたします。
       </div>
     </div>
-    <div class="skill_img"><img src="./images/カンプ書き出し/2x/できること①_pc@2x-80.jpg" alt="パソコンのイラスト"></div>
+    <div class="skill_img"><img src="./images/カンプ書き出し/2x/skill_01.svg" alt="パソコンのイラスト"></div>
   </div>
 
     <div class="skill_area01">
@@ -149,7 +228,7 @@
           JavaScript・jQueryを用いて動きのあるサイトを作ることができます。
           </div>
       </div>
-      <div class="skill_img"><img src="./images/カンプ書き出し/2x/できること②_pc@2x-80.jpg"></div>
+      <div class="skill_img"><img src="./images/カンプ書き出し/2x/skill_02.svg"></div>
     </div>
 
     <div class="skill_area01">
@@ -163,8 +242,76 @@
           良さを伝えるお手伝いができます。
           </div>
       </div>
-      <div class="skill_img"><img src="./images/カンプ書き出し/2x/できること③_pc@2x-80.jpg"></div>
+      <!-- <div class="skill_img"><img src="./images/カンプ書き出し/2x/できること③_pc@2x-80.jpg"></div> -->
+       <div class="skill_img">
+      <img src="./images/カンプ書き出し/2x/skill_03.svg">
     </div>
+    </div>
+
+    <!-- <div id="wave_04" class="scroll-infinity">
+      <div class="scroll-infinity__wrap">
+        <ul class="scroll-infinity__list scroll-infinity__list--right">
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>                        
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        </ul>
+        <ul class="scroll-infinity__list scroll-infinity__list--right">
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>                        
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        </ul>
+      </div>
+      </div>  -->
+
+    <div id="wave_05" class="scroll-infinity">
+    <div class="scroll-infinity__wrap">
+      <ul class="scroll-infinity__list scroll-infinity__list--left">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+      </ul>
+      <ul class="scroll-infinity__list scroll-infinity__list--left">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (6).svg"></li>
+      </ul>
+    </div>
+    </div> 
+
+    <div id="wave_04" class="scroll-infinity">
+      <div class="scroll-infinity__wrap">
+        <ul class="scroll-infinity__list scroll-infinity__list--right">
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>                        
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        </ul>
+        <ul class="scroll-infinity__list scroll-infinity__list--right">
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>                        
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (4).svg"></li>
+        </ul>
+      </div>
+      </div> 
+
+
 </section>
 
 <section id="contact">
@@ -218,14 +365,18 @@
 
 
 <section id="message" class="message_area">
-<img src="./images/カンプ書き出し/2x/thankstext_pc.svg" class="thanks_sun_pc">
-ここまでポートフォリオをご覧いただき<br>
-ありがとうございました。<br>
-<p class="para_2"></p>
-これまでの経歴・経験を強みにしながら<br>
-“きちんと伝え、その先を見据えた”デザインで<br>
-結果に繋げるデザインを提供します。
+  <div>
+    <img src="./images/カンプ書き出し/2x/thankstext_pc.svg" class="thanks_sun_pc">
+    <p>ここまでポートフォリオをご覧いただき<br>
+      ありがとうございました。</p>
+  </div>
+  <!-- <p class="para_2"></p> -->
+  <p>これまでの経歴・経験を強みにしながら<br>
+    “きちんと伝え、その先を見据えた”デザインで<br>
+    結果に繋げるデザインを提供します。</p>
 </section>
+
+
 
 
 
@@ -235,5 +386,9 @@
   </div>
 </footer>
 </div>
+
+
+
+
 </body>
 </html>
