--- a/loading.html
+++ b/loading.html
@@ -25,14 +25,40 @@
     color: #fff;
   }
   </style>
+  
+  
 </head>
 
 <body>
-<div class="logo_img">
+  <div class="loading-animation_gif">
+    <img src="../portfolio/loading-animation_gif.gif">
+  </div>
+
+
+
+<!-- <div class="logo_img smooth">
   <img src="./images/カンプ書き出し/2x/loading_船_pc.svg">
   <h2>ふなででざいん</h2>
   <img src="./images/カンプ書き出し/2x/loading_船_pc.svg">
-</div>
-</div>
+</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
