--- a/profile.html
+++ b/profile.html
@@ -23,19 +23,20 @@
   <div id="profile_page" class="main_contents">
   <header id="header" class="profile_header">
     <h1>
-      <object data="./images/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
+      <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
       </h1>
     <nav class="top_nav">
       <ul>
-        <li>大谷はこんな人間です！</li>
-        <li>経歴</li>
-        <li>わたしとWebデザイン</li>
-        <li>強み</li>
+        <li><a href="#parallax_box">大谷はこんな人間です！</a></li>
+        <li><a href="#profile_b">経歴</a></li>
+        <li><a href="#me_and_design">わたしとWebデザイン</a></li>
+        <li><a href="#strong_point">強み</a></li>
       </ul>
     </nav>
   </header>
   </div>
 
+  <div class="profile_ham">
     <nav class="ham_nav">
       <ul>
         <li><a href="index.html">ホーム</a></li>
@@ -43,10 +44,11 @@
       </ul>
     </nav>
     <button type="button" id="navbtn"></button>
+  </div>
 
 
 <div class="contents_area">
-  <div class="parallax_box">
+  <div id="parallax_box" class="parallax_box">
     <div class="parallax_content img_bg_01">わたしは<br>こんな人間です！</div>
     <div class="front_wrapper">
       <div class="front_content_area">
@@ -148,6 +150,77 @@
     Webデザインというものに興味を持ちました。
     </p>
   </div>
+  <div id="ship_left" class="ship">
+    <img src="images/カンプ書き出し/2x/アセット 57.svg">
+  </div>
+  <div id="ship_right" class="ship">
+    <img src="images/カンプ書き出し/2x/アセット 57.svg">
+  </div>
+  <div class="ship_and_me poyopoyo">
+    <img src="images/カンプ書き出し/2x/kirinuki_pc@2x-80.jpg">
+  </div>
+
+  <div id="wave_profile_01" class="scroll-infinity">
+    <div class="scroll-infinity__wrap">
+      <ul class="scroll-infinity__list scroll-infinity__list--right">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+      </ul>
+      <ul class="scroll-infinity__list scroll-infinity__list--right">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+      </ul>
+    </div>
+    </div>
+    <div id="wave_profile_02" class="scroll-infinity">
+      <div class="scroll-infinity__wrap">
+        <ul class="scroll-infinity__list scroll-infinity__list--right">
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>                        
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        </ul>
+        <ul class="scroll-infinity__list scroll-infinity__list--right">
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>                        
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        </ul>
+      </div>
+      </div>
+      <div id="wave_profile_03" class="scroll-infinity">
+        <div class="scroll-infinity__wrap">
+          <ul class="scroll-infinity__list scroll-infinity__list--right">
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>                        
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          </ul>
+          <ul class="scroll-infinity__list scroll-infinity__list--right">
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>                        
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+            <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+          </ul>
+        </div>
+        </div> 
+
 </section>
 
 <!-- モバイルファースト -->
@@ -156,53 +229,42 @@
     <path d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" />
   </svg>
 </div> -->
+<div class="bird_area">
+  <div class="bird"></div>
+  <div class="bird -type_2"></div>
+  <div class="bird -type_3"></div>
+</div>
+
 <section id="strong_point">
+  <div id="strong_ship" class="ship">
+    <img src="images/カンプ書き出し/2x/強み_船_pc.svg">
+  </div>
+  <div class="island">
+    <img src="../portfolio/images/カンプ書き出し/2x/強み_島_pc.svg">
+  </div>
+  <div id="wave_strong_01" class="scroll-infinity">
+    <div class="scroll-infinity__wrap">
+      <ul class="scroll-infinity__list scroll-infinity__list--right">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+      </ul>
+      <ul class="scroll-infinity__list scroll-infinity__list--right">
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>                        
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+        <li class="scroll-infinity__item"><img src="../portfolio/images/wave (7).svg"></li>
+      </ul>
+    </div>
+    </div>
+  
 <div class="container">
   <h2>わたしの強み</h2>
-  <!-- <h2>Aenean commodo ligula eget dolor aenean massa</h2>
-  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing
-    elit. Aenean commodo ligula eget dolor. Aenean massa.
-    Cum sociis natoque penatibus et magnis dis parturient
-    montes, nascetur ridiculus mus. Donec quam felis,
-    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-
-  <h2>Aenean commodo ligula eget dolor aenean massa</h2>
-
-  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing
-    elit. Aenean commodo ligula eget dolor. Aenean massa.
-    Cum sociis natoque penatibus et magnis dis parturient
-    montes, nascetur ridiculus mus. Donec quam felis,
-    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-
-  <ul>
-    <li>Lorem ipsum dolor sit amet consectetuer.</li>
-    <li>Aenean commodo ligula eget dolor.</li>
-    <li>Aenean massa cum sociis natoque penatibus.</li>
-  </ul>
-
-  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing
-    elit. Aenean commodo ligula eget dolor. Aenean massa.
-    Cum sociis natoque penatibus et magnis dis parturient
-    montes, nascetur ridiculus mus. Donec quam felis,
-    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-
-  <h3>Cum sociis natoque penatibus et magnis dis
-    parturient montes nascetur ridiculus mus</h3>
-
-  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing
-    elit. Aenean commodo ligula eget dolor. Aenean massa.
-    Cum sociis natoque penatibus et magnis dis parturient
-    montes, nascetur ridiculus mus. Donec quam felis,
-    ultricies nec, pellentesque eu, pretium quis, sem.</p>
-
-  <h2>Aenean commodo ligula eget dolor aenean massa</h2>
-
-  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing
-    elit. Aenean commodo ligula eget dolor. Aenean massa.
-    Cum sociis natoque penatibus et magnis dis parturient
-    montes, nascetur ridiculus mus. Donec quam felis,
-    ultricies nec, pellentesque eu, pretium quis, sem.</p> -->
-
   <div class="strong_point_box">
     <div class="strong_point_title">ヒアリング力</div>
     <img src="./images/18225.png" alt="説明をしているイラスト" class="strong_point_image_1">
