--- a/works.html
+++ b/works.html
@@ -21,9 +21,9 @@
 
 <body>
   <div class="main_contents">
-  <header id="header" class="profile_header">
+  <header id="header" class="works_header">
     <h1>
-    <object data="./images/カンプ書き出し/2x/下層_logo_pc.svg" width="254" height="55"> </object>
+    <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
     </h1>
     <nav class="top_nav">
     </nav>
@@ -43,27 +43,45 @@
     <p>タップすると詳細を見ることができます。</p>
     <div class="works_area">
       <div class="works_contents">
-        <div class="works_img"></div>
+        <div class="works_img" onclick="location.href='detail.html'">
+          <img src="../portfolio/images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg">
+        </div>
         <div class="works_text">○○様&emsp;公式サイト</div>
       </div>
       <div class="works_contents">
-        <div class="works_img"></div>
+        <div class="works_img">
+          <img src="../portfolio/images/カンプ書き出し/2x/mockup_portfolio_pc@2x-80.jpg">
+        </div>
         <div class="works_text">○○様&emsp;公式サイト</div>
       </div>
       <div class="works_contents">
-        <div class="works_img"></div>
+        <div class="works_img">
+          <img src="../portfolio/images/カンプ書き出し/2x/mockup_designcafe_pc@2x-80.jpg">
+        </div>
         <div class="works_text">○○様&emsp;公式サイト</div>
       </div>
       <div class="works_contents">
-        <div class="works_img"></div>
+        <div class="works_img">
+          <img src="../portfolio/images/カンプ書き出し/2x/mockup_pc@2x-80.jpg">
+        </div>
         <div class="works_text">○○様&emsp;公式サイト</div>
       </div>
       <div class="works_contents">
-        <div class="works_img"></div>
+        <div class="works_img">
+          <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger@2x-80.jpg">
+        </div>
         <div class="works_text">○○様&emsp;公式サイト</div>
       </div>
       <div class="works_contents">
-        <div class="works_img"></div>
+        <div class="works_img">
+          <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger_pop2@2x-80.jpg">
+        </div>
+        <div class="works_text">○○様&emsp;公式サイト</div>
+      </div>
+      <div class="works_contents">
+        <div class="works_img">
+          <img src="../portfolio/images/カンプ書き出し/2x/mockup_trip@2x-80.jpg">
+        </div>
         <div class="works_text">○○様&emsp;公式サイト</div>
       </div>
     </div>
