--- a/profile.html
+++ b/profile.html
@@ -47,9 +47,13 @@
   </div>
 
 
-<div class="contents_area">
+<div class="contents_area profile_contents">
   <div id="parallax_box" class="parallax_box">
-    <div class="parallax_content img_bg_01">わたしは<br>こんな人間です！</div>
+    <div class="parallax_content img_bg_01">
+      <div class="parallax_text">
+      わたしは<br>こんな人間です！
+    </div>
+    </div>
     <div class="front_wrapper">
       <div class="front_content_area">
         <div class="front_content_title">
@@ -71,7 +75,9 @@
         </div>
       </div>
     </div>
-    <div class="parallax_content img_bg_02">“わたし”に<br>なるために<br>生きてます</div>
+    <div class="parallax_content img_bg_02">
+      <div class="parallax_text">“わたし”に<br>なるために<br>生きてます</div>
+    </div>
     <div class="front_wrapper">
       <div class="front_content_area">
         <div class="front_content_title">
@@ -92,7 +98,10 @@
     </div>
     <!-- </div> -->
 
-    <div class="parallax_content img_bg_03">まじめだけど、<br>どこか遊び心のある<br>人でいたい</div>
+    <div class="parallax_content img_bg_03">
+      <div class="parallax_text">
+        まじめだけど、<br>どこか遊び心のある<br>人でいたい
+      </div></div>
     <div class="front_wrapper">
       <div class="front_content_area">
         <div class="front_content_title">
