--- a/work_workers.html
+++ b/work_workers.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>detail page</title>
+  <title>workers</title>
   <link rel="stylesheet" href="https://use.typekit.net/xxxxxxx.css">
   <link rel="stylesheet" href="reset.css" />
 <link rel="stylesheet" href="style.css" />
@@ -22,9 +22,9 @@
 <body>
   <div class="main_contents">
   <header id="header" class="detail_header">
-    <h1>
-      <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
-    </h1>
+      <h1>
+        <object data="./images/カンプ書き出し/2x/アセット 51.svg" width="254" height="55"> </object>
+      </h1>
     <nav class="top_nav">
     </nav>
     <nav class="ham_nav">
@@ -38,11 +38,13 @@
  
   <div class="contents_area">
     <h2>ー作品詳細ー</h2>
+    <div class="zoomIn">
     <img src="./images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg" alt="PCにモックアップした画像" class="mockup_pc">
+    </div>
       <div class="mockup_text_area">
         <div class="mockup_page_left">
           <div class="mockup_title">概要</div>
-          <div class="mockup_text">~を強みとする美容室のサイト</div>
+          <div class="mockup_text">会員制コワーキングスペースのＬＰ（ＷＯＲＫＥＲＳ様）</div>
           <div class="mockup_title">想定ターゲット</div>
           <div class="mockup_text">20代女性</div>
           <div class="mockup_title">担当内容</div>
