--- a/index.html
+++ b/index.html
@@ -35,9 +35,24 @@
       </ul>
     </nav>
   </header>
+
+  <div class="profile_ham">
+    <nav class="ham_nav">
+      <ul>
+        <li><a href="#concept">コンセプト</a></li>
+        <li><a href="#works">制作実績</a></li>
+        <li><a href="#skill">できること</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </nav>
+    <button type="button" id="navbtn" class="top_nav_btn"></button>
+  </div>
+
   <main>
+    <div class="imgBox inview fadeIn_up">
     <div id="mainvisual">
       <h1>“その先”を見据えたデザインで<br>新たな船出を、ともに。</h1>
+    </div>
     </div>
     
     
@@ -58,6 +73,7 @@
 
 <div class="contents_area">
 <section id="concept">
+  <div class="imgBox inview fadeIn_up">
   <div class="concept_title">コンセプト</div>
   <p>新たな船出は、期待だけでなく<br>
     上手く進んでいけるのかな？という不安がつきもの。<br>
@@ -65,8 +81,10 @@
     未来に向かって漕ぎだすお手伝いをしたい。<br>
     そんな想いを、この屋号に込めています。
   </p>
+  </div>
 </section>
 
+<div class="imgBox inview fadeIn_up">
 <section id="profile">
   <div class="profile_img_area">
     <img src="../portfolio/images/仮プロフィール.jpg" alt="大谷のプロフィール画像">
@@ -74,7 +92,7 @@
   <div class="profile_right">
     <div class="name_area">
       <div class="name">大谷&emsp;歩紀</div>
-      <div class="inglish_name">Ohtani&emsp;Ibuki</div>
+      <div class="english_name">Ohtani&emsp;Ibuki</div>
     </div>
     <div class="profile_text">
       <p>
@@ -85,13 +103,21 @@
     </div>
   </div>
 </section>
-
-<button class="profile_btn01" onclick="location.href='profile.html'">大谷ってどんな人？</button>
-<div class="comment_area">
-  <div class="comment">\大谷ってどんな人？/</div>
-  <div class="comment">\どんな想いを抱いているの？/</div>
 </div>
+
+<div class="imgBox inview fadeIn_up">
+<button class="profile_btn01" onclick="location.href='profile.html'">大谷ってどんな人？</button>
+</div>
+
+<div class="comment_area">
+  <div class="imgBox inview fadeIn_up"><div class="comment">\大谷ってどんな人？/</div></div>
+  <div class="imgBox inview fadeIn_up"><div class="comment">\どんな想いを抱いているの？/</div></div>
+</div>
+<div class="imgBox inview fadeIn_up">
 <button class="profile_btn02" onclick="location.href='profile.html'">自己紹介ページはこちら！</button>
+</div>
+
+
 
 
 <section id="works">
@@ -117,43 +143,45 @@
   </div>
   </div> 
 
+  <div class="imgBox inview fadeIn_up">
   <h2>制作実績</h2>
+  </div>
   <div class="works_area">
     <div class="works_contents">
-      <div class="works_img">
+      <div class="works_img" onclick="location.href='work_workers.html'">
         <img src="../portfolio/images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg">
       </div>
-      <div class="works_text">○○様&emsp;公式サイト</div>
+      <div class="works_text">WORKERS様&emsp;LP</div>
     </div>
     <div class="works_contents">
-      <div class="works_img">
+      <div class="works_img" onclick="location.href='work_portfolio.html'">
         <img src="../portfolio/images/カンプ書き出し/2x/mockup_portfolio_pc@2x-80.jpg">
       </div>
-      <div class="works_text">○○様&emsp;公式サイト</div>
+      <div class="works_text">大谷歩紀&emsp;ポートフォリオサイト</div>
     </div>
     <div class="works_contents">
-      <div class="works_img">
+      <div class="works_img" onclick="location.href='work_designcafe.html'">
         <img src="../portfolio/images/カンプ書き出し/2x/mockup_designcafe_pc@2x-80.jpg">
       </div>
-      <div class="works_text">○○様&emsp;公式サイト</div>
+      <div class="works_text">design cafe様&emsp;公式サイト</div>
     </div>
     <div class="works_contents">
-      <div class="works_img">
+      <div class="works_img" onclick="location.href='work_hairsalon.html'">
         <img src="../portfolio/images/カンプ書き出し/2x/mockup_pc@2x-80.jpg">
       </div>
-      <div class="works_text">○○様&emsp;公式サイト</div>
+      <div class="works_text">美容室 LIFE hair design様&emsp;公式サイト</div>
     </div>
     <div class="works_contents">
-      <div class="works_img">
+      <div class="works_img banner_area">
         <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger@2x-80.jpg">
       </div>
-      <div class="works_text">○○様&emsp;公式サイト</div>
+      <div class="works_text">ハンバーガーショップ&emsp;SNS用広告用バナー【POPバージョン】</div>
     </div>
     <div class="works_contents">
-      <div class="works_img">
+      <div class="works_img banner_area">
         <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger_pop2@2x-80.jpg">
       </div>
-      <div class="works_text">○○様&emsp;公式サイト</div>
+      <div class="works_text">ハンバーガーショップ&emsp;SNS用広告用バナー【POPバージョン】</div>
     </div>
   </div>
   <button class="works_btn" onclick="location.href='works.html'">一覧を見る</button>
@@ -203,10 +231,14 @@
     </div>
     </div> 
 
+    <div class="imgBox inview fadeIn_up">
   <h2>できること</h2>
+    </div>
+  <div class="imgBox inview fadeIn_left">
   <div class="skill_area01">
     <div class="design_skill">
       <div class="skill_title">デザイン</div>
+      <div class="skill_img sp_img"><img src="./images/カンプ書き出し/2x/skill_01.svg" alt="パソコンのイラスト"></div>
       <p>illustrator/Photoshop</p>
       <div class="skill_text">
         ターゲットにどんな行動を促したいのかを考え<br>
@@ -215,12 +247,15 @@
         SNS投稿・資料作成・ロゴ・名刺・メニュー表なども作成いたします。
       </div>
     </div>
-    <div class="skill_img"><img src="./images/カンプ書き出し/2x/skill_01.svg" alt="パソコンのイラスト"></div>
+    <div class="skill_img pc_img"><img src="./images/カンプ書き出し/2x/skill_01.svg" alt="パソコンのイラスト"></div>
+  </div>
   </div>
 
+  <div class="imgBox inview fadeIn_left">
     <div class="skill_area01">
       <div class="design_skill">
         <div class="skill_title">コーディング</div>
+        <div class="skill_img sp_img"><img src="./images/カンプ書き出し/2x/skill_02.svg"></div>
         <p>HTML/CSS/JavaScript</p>
           <div class="skill_text">
           デザインを正しく表現するためのコーディングをします。<br>
@@ -228,12 +263,17 @@
           JavaScript・jQueryを用いて動きのあるサイトを作ることができます。
           </div>
       </div>
-      <div class="skill_img"><img src="./images/カンプ書き出し/2x/skill_02.svg"></div>
+      <div class="skill_img pc_img"><img src="./images/カンプ書き出し/2x/skill_02.svg"></div>
     </div>
+  </div>
 
+  <div class="imgBox inview fadeIn_left">
     <div class="skill_area01">
       <div class="design_skill">
         <div class="skill_title">ライティング</div>
+        <div class="skill_img sp_img">
+          <img src="./images/カンプ書き出し/2x/skill_03.svg">
+        </div>
         <p>“いいところ”を引き出す言葉選び"</p>
         <div class="skill_text">
           人材会社で求職者さんの自己ＰＲ文を作ったり、<br>
@@ -243,10 +283,11 @@
           </div>
       </div>
       <!-- <div class="skill_img"><img src="./images/カンプ書き出し/2x/できること③_pc@2x-80.jpg"></div> -->
-       <div class="skill_img">
+       <div class="skill_img pc_img">
       <img src="./images/カンプ書き出し/2x/skill_03.svg">
     </div>
     </div>
+  </div>
 
     <!-- <div id="wave_04" class="scroll-infinity">
       <div class="scroll-infinity__wrap">
@@ -314,12 +355,16 @@
 
 </section>
 
+
 <section id="contact">
+  <div class="imgBox inview fadeIn_up">
   <h2>CONTACT</h2>
   <p>ご依頼やお問い合わせ・こんなことできる？といったご相談など<br>
     お気軽にお問い合わせください。<br>
     1日以内にお返事させていただきます。
   </p>
+  </div>
+  <div class="imgBox inview fadeIn_up">
   <form action="your-server-side-script.php" method="POST">
   </form>
     <div class="form-row">
@@ -350,12 +395,9 @@
       </div>
       <textarea id="message" name="message" rows="5"placeholder="お問い合わせ内容をこちらにご記入ください" required></textarea>
     </div>
-    <div class="form-row">
-      <div class="form-label"></div>
-      <!-- <button type="submit">送信</button> -->
-    </div>
     <button class="contact_btn">送信する</button>
   </form>
+  </div>
 </section>
 
 
@@ -364,6 +406,7 @@
 
 
 
+<div class="imgBox inview fadeIn_up">
 <section id="message" class="message_area">
   <div>
     <img src="./images/カンプ書き出し/2x/thankstext_pc.svg" class="thanks_sun_pc">
@@ -375,6 +418,7 @@
     “きちんと伝え、その先を見据えた”デザインで<br>
     結果に繋げるデザインを提供します。</p>
 </section>
+</div>
 
 
 
@@ -389,6 +433,31 @@
 
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="./jquery.inview.min.js"></script>
+
+<script>
+  $(function(){
+  $(".inview").on("inview", function (event, isInView) {
+    if (isInView) {
+      $(this).stop().addClass("is-show");
+    }
+  });
+});
+
+  $(function(){
+  $(".inview").on("inview", function (event, isInView) {
+    if (isInView) {
+      $(this).stop().addClass("is-show");
+    }
+  });
+});
+</script>
+<script>
+    document.getElementById("navbtn").onclick = function(){
+      document.querySelector('html').classList.toggle('open');
+    }
+    </script>
 
 </body>
 </html>
