--- a/works.html
+++ b/works.html
@@ -43,46 +43,46 @@
     <p>タップすると詳細を見ることができます。</p>
     <div class="works_area">
       <div class="works_contents">
-        <div class="works_img" onclick="location.href='detail.html'">
+        <div class="works_img" onclick="location.href='work_workers.html'">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_workers_pc@2x-80.jpg">
         </div>
-        <div class="works_text">○○様&emsp;公式サイト</div>
+        <div class="works_text">WORKERS様&emsp;LP</div>
       </div>
-      <div class="works_contents">
+      <div class="works_contents" onclick="location.href='work_portfolio.html'">
         <div class="works_img">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_portfolio_pc@2x-80.jpg">
         </div>
-        <div class="works_text">○○様&emsp;公式サイト</div>
+        <div class="works_text">大谷歩紀&emsp;ポートフォリオサイト</div>
       </div>
-      <div class="works_contents">
+      <div class="works_contents" onclick="location.href='work_designcafe.html'">
         <div class="works_img">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_designcafe_pc@2x-80.jpg">
         </div>
-        <div class="works_text">○○様&emsp;公式サイト</div>
+        <div class="works_text">design cafe様&emsp;公式サイト</div>
       </div>
-      <div class="works_contents">
+      <div class="works_contents" onclick="location.href='work_hairsalon.html'">
         <div class="works_img">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_pc@2x-80.jpg">
         </div>
-        <div class="works_text">○○様&emsp;公式サイト</div>
+        <div class="works_text">美容室 LIFE hair design様&emsp;公式サイト</div>
       </div>
       <div class="works_contents">
-        <div class="works_img">
+        <div class="works_img banner_area">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger@2x-80.jpg">
         </div>
-        <div class="works_text">○○様&emsp;公式サイト</div>
+        <div class="works_text">ハンバーガーショップ&emsp;SNS用広告用バナー【POPバージョン】</div>
       </div>
-      <div class="works_contents">
-        <div class="works_img">
+      <div class="works_contents ">
+        <div class="works_img banner_area">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_burger_pop2@2x-80.jpg">
         </div>
-        <div class="works_text">○○様&emsp;公式サイト</div>
+        <div class="works_text">ハンバーガーショップ&emsp;SNS広告用バナー【POPバージョン】</div>
       </div>
       <div class="works_contents">
-        <div class="works_img">
+        <div class="works_img banner_area">
           <img src="../portfolio/images/カンプ書き出し/2x/mockup_trip@2x-80.jpg">
         </div>
-        <div class="works_text">○○様&emsp;公式サイト</div>
+        <div class="works_text">トラベルメディアのアプリ&emsp;SNS広告用バナー</div>
       </div>
     </div>
   </div>
